kubernetes/struts/staging/struts-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start
    nginx.ingress.kubernetes.io/auth-url: http://oauth.default.svc.cluster.local:4180/oauth2/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_redirect https://staging.narrative.org https://staging-struts.narrative.org;
      sub_filter_once off;
      sub_filter "https://staging.narrative.org/" "https://staging-struts.narrative.org/";
      sub_filter "https://staging.narrative.org" "https://staging-struts.narrative.org";
    nginx.ingress.kubernetes.io/proxy-redirect-from: https://staging.narrative.org/
    nginx.ingress.kubernetes.io/proxy-redirect-to: https://staging-struts.narrative.org/
    nginx.ingress.kubernetes.io/upstream-vhost: staging.narrative.org
    kubernetes.io/ingress.class: "nginx"
  name: struts
  namespace: staging
spec:
  rules:
  - host: staging-struts.narrative.org
    http:
      paths:
      - backend:
          serviceName: narrative-core
          servicePort: 8080
  tls:
  - secretName: cloudflare-wildcard-narrative-org
    hosts:
      - staging-struts.narrative.org
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: oauth-staging-struts
  namespace: default
spec:
  rules:
  - host: staging-struts.narrative.org
    http:
      paths:
      - backend:
          serviceName: oauth
          servicePort: 4180
        path: /oauth2
  tls:
  - secretName: cloudflare-wildcard-narrative-org
    hosts:
      - staging-struts.narrative.org
